# ops-supportability

./: .gitignore  .gitreview  CMakeLists.txt  DESIGN.md  README.md
conf/: ops_coredump.conf  ops_diagdump.yaml  ops_events.yaml  ops_featuremapping.yaml  ops_showtech.yaml  ops_supportability_dir.conf
include/: copy_core_dump_vty.h  core_dump.h  diag_dump.h  diag_dump_vty.h  eventlog.h  feature_mapping.h  show_core_dump_vty.h  show_events_vty.h  show_tech_vty.h  show_vlog_vty.h  showtech.h  supportability_utils.h  supportability_vty.h  syslog_vty.h  vtysh_ovsdb_syslog_context.h
ops-tests/component/: syslog_tcp_server.py  syslog_udp_server.py  test_logging.py  test_show_vlog.py  test_syslog_remote.py
scripts/: sftp_noi.sh  tftp_noi.sh
src/: eventlog.c  opssupportability.pc.in  supportability_utils.c
src/cli/: CMakeLists.txt  copy_core_dump_vty.c  core_dump.c  diag_dump_vty.c  show_core_dump_vty.c  show_events_vty.c  show_tech_vty.c  show_vlog_vty.c  supportability_vty.c  syslog_vty.c  vtysh_ovsdb_syslog_context.c
src/eventlog/: eventlog.c
src/featuremapping/: feature_mapping.c
src/python/: ops_diagdump.py  ops_eventlog.py  ops_supportability.py  setup.py
src/showtech/: showtech.c
test/: diag_dump_test.py  eventlog_test.py  show-tech_test.py  show_core-dump_test.py  show_vlog_test.py
tests/: diag_dump_test.py  show-tech_test.py
